# Solvers

./: .gitignore  CMakeLists.txt  main.cpp
src/: .ycm_extra_conf.py
src/launcher/: Launcher.cpp  Launcher.h
src/launcher/util/: Parameters.cpp  Parameters.hpp  TaskReader.cpp  TaskReader.hpp
src/launcher/util/Runners/: ElasticitySolverRunner.cpp  ElasticitySolverRunner.hpp
src/libelast/: Problem.cpp  Problem.h
src/libsolvers/: ElasticitySolver.hpp  global.hpp
src/libsolvers/BoundaryConditions/: BodyForce.cpp  BodyForce.hpp  BoundaryConditions.cpp  BoundaryConditions.hpp
src/libsolvers/ElasticitySolver/: BodyForce.cpp  BodyForce.hpp  BoundaryConditions.cpp  BoundaryConditions.hpp  DummyProblem.cpp  DummyProblem.hpp  ElasticitySolver.cpp  ElasticitySolver.hpp  ElasticitySolverRunner.hpp  Parameters.cpp  Parameters.hpp  QuadraturePointsHistory.cpp  QuadraturePointsHistory.hpp  Utils.cpp  Utils.hpp
src/libsolvers/LaplaceSolver/: GeneralSolver.cpp  GeneralSolver.hpp  PrimalSolver.cpp  PrimalSolver.hpp
src/libsolvers/Postprocessor/: EvaluationBase.cpp  EvaluationBase.hpp  OutputResults.cpp  OutputResults.hpp
src/libsolvers/Refinement/: Refiner.cpp  Refiner.hpp
